<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ScheduleFun</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome_main">Welcome to the scheduler</string>
    <string name="login_main">Login:</string>
    <string name="user_main">Username:</string>
    <string name="user_hint_main">Enter Username Here</string>
    <string name="password_text">Password:</string>
    <string name="password_hint">Enter Password Here</string>
    <string name="signup_main_btn_text">SignUp</string>
    <string name="login_btn_text_main">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="signup_activity_welcome">Signup Form</string>
    <string name="signup_activity_username_text">Username:</string>
    <string name="signup_username_field_hint">Enter Username Here</string>
    <string name="password_again">Re-enter Password</string>
    <string name="signup_intention">Fill out fields</string>
    <string name="login_welcome_text">Enter Login Information</string>
    <string name="login_status">status:</string>
    <string name="btn_confirm">Confirm</string>
    <string name="login_forgot_btn">Forgot Pass</string>
    <string name="main_login_text">Already registrered?</string>
    <string name="main_signup_text">New user?</string>
    <string name="title_activity_user_overview">UserOverviewActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

</resources>
