<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/login_intro_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/login_welcome_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/login_username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_intro_text"
        android:layout_below="@+id/login_intro_text"
        android:layout_marginTop="54dp"
        android:text="@string/signup_activity_username_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/login_username_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_username_text"
        android:layout_below="@+id/login_username_text"
        android:hint="@string/signup_username_field_hint"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/login_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_username_field"
        android:layout_centerVertical="true"
        android:text="@string/password_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/login_password_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_status_text"
        android:layout_below="@+id/login_password_text"
        android:hint="@string/password_hint"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/login_status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_password_text"
        android:layout_below="@+id/login_password_field"
        android:layout_marginTop="30dp"
        android:text="@string/login_status" />

    <Button
        android:id="@+id/login_forgot_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/login_confirm_btn"
        android:layout_alignLeft="@+id/login_status_text"
        android:text="@string/login_forgot_btn" 
        android:onClick="forgotPasswordClick"/>

    <Button
        android:id="@+id/login_confirm_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/login_intro_text"
        android:layout_marginBottom="41dp"
        android:text="@string/btn_confirm" 
        android:onClick="loginClick"/>

</RelativeLayout>
